--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
 
-        <table id="clocksTableId">
+        <table id="clocksTableId" class="tableCenter">
 
             <thead>
                 <tr>
