--- a/index.html
+++ b/index.html
@@ -77,16 +77,36 @@
                 <tbody>
                     <tr>
                         <td>
-                            <select name="" id=""></select>
-                            <select name="" id=""></select>
+                            <select name="" class="hrs" id="h_NId">
+                            </select>
+
+                            <select name="" class="mns" id="m_NId">
+                            </select>
+
+                            <select name="" class="ap" id="ap_NId">
+                                <option value="AM">AM </option>
+                                <option value="PM">PM </option>
+                            </select>
                         </td>
                         <td>
-                            <select name="" id=""></select>
-                            <select name="" id=""></select>
+                            <select name="" class="hrs" id="h_EId"></select>
+
+                            <select name="" class="mns" id="m_EId"></select>
+
+                            <select name="" class="ap" id="ap_EId">
+                                <option value="AM">AM </option>
+                                <option value="PM">PM </option>
+                            </select>
                         </td>
                         <td>
-                            <select name="" id=""></select>
-                            <select name="" id=""></select>
+                            <select name="" class="hrs" id="h_IId"></select>
+
+                            <select name="" class="mns" id="m_IId"></select>
+
+                            <select name="" class="ap" id="ap_IId">
+                                <option value="AM">AM </option>
+                                <option value="PM">PM </option>
+                            </select>
                         </td>
                     </tr>
 
