--- a/index.html
+++ b/index.html
@@ -77,36 +77,27 @@
                 <tbody>
                     <tr>
                         <td>
-                            <select name="" class="hrs" id="h_NId">
-                            </select>
+                            <select name="" class="hrs" id="h_NId"> </select>
 
-                            <select name="" class="mns" id="m_NId">
-                            </select>
+                            <select name="" class="mns" id="m_NId"></select>
 
-                            <select name="" class="ap" id="ap_NId">
-                                <option value="AM">AM </option>
-                                <option value="PM">PM </option>
-                            </select>
+                            <select name="" class="ap" id="ap_NId"> </select>
                         </td>
+
                         <td>
                             <select name="" class="hrs" id="h_EId"></select>
 
                             <select name="" class="mns" id="m_EId"></select>
 
-                            <select name="" class="ap" id="ap_EId">
-                                <option value="AM">AM </option>
-                                <option value="PM">PM </option>
-                            </select>
+                            <select name="" class="ap" id="ap_EId"> </select>
                         </td>
+
                         <td>
                             <select name="" class="hrs" id="h_IId"></select>
 
                             <select name="" class="mns" id="m_IId"></select>
 
-                            <select name="" class="ap" id="ap_IId">
-                                <option value="AM">AM </option>
-                                <option value="PM">PM </option>
-                            </select>
+                            <select name="" class="ap" id="ap_IId"> </select>
                         </td>
                     </tr>
 
