--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
     <section>
 
+        <div class="container" onload="generateTimezoneCLocks(['Europe/Amsterdam','Africa/Cairo','Asia/Kolkata'])">
+        </div>
+
+    </section>
+
+    <section>
+
         <table class="clocksTable tableCenter">
 
             <thead>
